[package]
name = "TwitterTime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = { version = "1.16.1", features = ["full"] }
serde_json = "1.0.79"
dotenv = "0.15.0"
chrono = "0.4"